# logyeet

./: .gitignore  .golangci.yaml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
cmd/sendstdin/: BUILD.bazel  main.go
cmd/tinyserver/: BUILD.bazel  main.go
pkg/tinyserver/: BUILD.bazel  tinyserver.go
pkg/types/: BUILD.bazel  types.go
protos/: BUILD.bazel  logyeet.proto
