load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "logyeetpb_proto",
    srcs = ["logyeet.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "logyeetpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jrockway/logyeet/pkg/logyeetpb",
    proto = ":logyeetpb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":logyeetpb_go_proto"],
    importpath = "github.com/jrockway/logyeet/pkg/logyeetpb",
    visibility = ["//visibility:public"],
)
