load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jrockway/logyeet/cmd/tinyserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/tinyserver:go_default_library",
        "//protos:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "tinyserver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
